Adds sagas for tecnico and external users